--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-This package runs a GUI that enables users to visualise the results of running various common computer vision processes, such as colour segmentation, edge detection and smoothin/blurring operations.
+This package runs a GUI that enables users to visualise the results of running various common computer vision processes, such as colour segmentation, edge detection and smoothing/blurring operations.
 
 Alternatively, it includes a python script titled cv_functions.py that makes it somewhat easier to view how to operate some of the basic OpenCV functions. 
