--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 This package runs a GUI that enables users to visualise the results of running various common computer vision processes, such as colour segmentation, edge detection, smoothing/blurring and DoG operations.
 
-Two versions exist, one for running on Ubuntu 16.04 (main-gui-ubuntu-16) and the other for Ubuntu running on Ubuntu 18.04 (main-gui-ubuntu-18).
+The Ubuntu 18.04/16.04 executable is called "main-gui".
 
 Alternatively, it includes a python script titled cv_functions.py that makes it somewhat easier to view how to operate some of the basic OpenCV functions. 
