Created a windows executable

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 This package runs a GUI that enables users to visualise the results of running various common computer vision processes, such as colour segmentation, edge detection, smoothing/blurring and DoG operations.
 
-The Ubuntu 18.04/16.04 executable is called "main-gui".
+The Ubuntu 18.04/16.04 executable is called "main-gui" and located in the main directory, whilst the Windows-OS executable is found in the directory dist-windows and simply called "gui".
 
 Alternatively, it includes a python script titled cv_functions.py that makes it somewhat easier to view how to operate some of the basic OpenCV functions. 
